# mapel

./: .gitignore  .style.yapf  MAIN.py  MANIFEST.in  README.md  SECURITY.md  example_1.py  example_2.py  example_3.py  example_import.py  example_map_of_approvals.py  example_map_of_graphs.py  example_map_of_ordinals.py  example_native.py  index.rst  matrices.sh  matrix2png.py  positionwise_experiment.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  skeleton.py  teaser_1.py  teaser_2.py  teaser_3.py  teste.py  testing.py  tmp_1.py
.github/workflows/: autoyapf.yml  multidistrib.yml  testing-more.yml  whole-mapel-pub.yml
_images/fix_m/: ic_m  (+5 more)
binder/: requirements.txt
devtools/: update_ver.sh
examples/: example_approval_elections.py  example_csv_based_experiment.py  example_kamada_kawai.py  example_map_of_approvals.py  example_online_map_of_approval_elections.py  example_online_map_of_ordinal_elections.py  example_ordinal_elections.py
mapel/: MAIN2.py  __init__.py  objects.py  requirements.txt  teaser_1.py  teaser_2.py  teaser_3.py  tmp2.py
mapel-1.0.3/: MANIFEST.in  README.md
mapel-all/: README.md  pyproject.toml  requirements.txt
mapel-core/: README.md  pyproject.toml  requirements.txt
mapel-core/src/mapel/core/: features_main.py  glossary.py  inner_distances.py  matchings.py  printing.py  utils.py
mapel-core/src/mapel/core/embedding/: embed.py
mapel-core/src/mapel/core/embedding/kamada_kawai/: kamada_kawai.py  optimization_algorithms.py
mapel-core/src/mapel/core/embedding/simulated_annealing/: simulated_annealing.py
mapel-core/src/mapel/core/features/: common.py  distortion.py  mallows.py  monotonicity.py
mapel-core/src/mapel/core/objects/: Experiment.py  Family.py  Instance.py
mapel-core/src/mapel/core/persistence/: experiment_exports.py  experiment_imports.py
mapel-core/src/mapel/main/: features_main.py  glossary.py  inner_distances.py
mapel-core/src/mapel/main/embedding/kamada_kawai/: energy_functions.py  kamada_kawai.py  optimization_algorithms.py
mapel-core/src/mapel/main/features/: stability.py
mapel-core/src/mapel/main/objects/: Experiment.py
mapel-elections/: LICENSE.txt  README.md  optional_requirements.txt  pyproject.toml  requirements.txt  setup.py
mapel-elections/src/mapel/elections/: __init__.py  costs.py  cultures_.py  distances_.py  features_.py  metrics_.py
mapel-elections/src/mapel/elections/cultures/: alliances.py  converters.py  didi.py  euclidean.py  fake.py  group_separable.py  guardians.py  guardians_plus.py  identity.py  impartial.py  mallows.py  noise.py  other.py  params.py  partylist.py  preflib.py  resampling.py  single_crossing.py  single_peaked.py  sp_matrices.py  unused.py  update_params.py  urn.py  urn_model.py
mapel-elections/src/mapel/elections/cultures/mallows_positionmatrices/: 13_matrix.txt  14_matrix.txt  16_matrix.txt  17_matrix.txt  18_matrix.txt  24_matrix.txt  26_matrix.txt  28_matrix.txt  4_matrix.txt
mapel-elections/src/mapel/elections/cultures/matrices/: group_separable_matrices.py  single_crossing_matrices.py
mapel-elections/src/mapel/elections/cultures/nonstandard/: alliances.py  parties.py
mapel-elections/src/mapel/elections/cultures/sampling/: samplemat.py
mapel-elections/src/mapel/elections/cultures/to_be_removed/: didi.py  euclidean.py  group_separable.py  impartial.py  partylist.py  urn.py
mapel-elections/src/mapel/elections/distances/: committee_distances.py  cppdistances.cpp  feature_distance.py  ilp_isomorphic.py  ilp_other.py  ilp_subelections.py  lp.py  main_approval_distances.py  main_ordinal_distances.py  positionwise_infty.py
mapel-elections/src/mapel/elections/features/: approx.py  banzhaf_cc.py  clustering.py  cohesive.py  dap_approximate.py  dependent_rounding.py  dimensionality.py  distortion.py  diversity.py  entropy.py  justified_representation.py  other.py  partylist.py  power_index.py  proportionality_degree.py  ranging_cc.py  scores.py  vc_diversity.py
mapel-elections/src/mapel/elections/metrics/: cppdistances.cpp  lp.py  main_approval_distances.py  main_ordinal_distances.py
mapel-elections/src/mapel/elections/objects/: ApprovalElection.py  ApprovalElectionExperiment.py  Election.py  ElectionExperiment.py  ElectionFamily.py  ElectionFeatures.py  OrdinalElection.py  OrdinalElectionExperiment.py
mapel-elections/src/mapel/elections/other/: development.py  equivalence_classes.py  matrices.py  matrix2png.py  pabulib.py  parser.py  rules.py  utilities.py  winners.py  winners2.py
mapel-elections/src/mapel/elections/persistence/: election_exports.py  election_imports.py
mapel-elections/tests/mapel/func_tests/: approval_cultures_test.py  approval_distances_test.py  approval_features_test.py  ordinal_cultures_test.py  ordinal_distances_test.py  ordinal_features_test.py  swap_distance_test.py
mapel-marriages/: LICENSE.txt  README.md  pyproject.toml  requirements.txt
mapel-marriages/mapel/marriages/cultures/: mallows.py  urn.py
mapel-marriages/src/mapel/marriages/: __init__.py  cultures_.py  distances_.py  metrics_.py
mapel-marriages/src/mapel/marriages/cultures/: euclidean.py  impartial.py  mallows.py  urn.py
mapel-marriages/src/mapel/marriages/distances/: main_marriages_distances.py
mapel-marriages/src/mapel/marriages/features/: basic_features.py  experiments_marriage.py
mapel-marriages/src/mapel/marriages/metrics/: main_marriages_distances.py
mapel-marriages/src/mapel/marriages/objects/: Marriages.py  MarriagesExperiment.py  MarriagesFamily.py
mapel-marriages/src/mapel/marriages/persistence/: instance_exports.py  instance_imports.py
mapel-marriages/tests/mapel/func_tests/: marriages_cultures_test.py  marriages_distances_test.py  marriages_features_test.py
mapel-roommates/: README.md  pyproject.toml  requirements.txt
mapel.egg-info/: PKG-INFO  SOURCES.txt
sample/: __init__.py
(+3639 files in other folders)
