[build-system]
requires = ["setuptools>=64", "wheel", "pybind11~=2.6.1", "numpy"]
build-backend = "setuptools.build_meta"


[project]
name = "mapel"
version= "1.3.0"
authors = [
 {name = "Stanisław Szufa", email = "s.szufa@gmail.com"}
 {name = "Niclas Boehmer", email = "niclas.boehmer@tu-berlin.de"}
 {name = "Piotr Faliszewski", email = "faliszew@agh.edu.pl"}
 {name = "Łukasz Janeczko", email = "lukij1997@gmail.com"}
 {name = "Andrzej Kaczmarczyk", email = "andrzej.kaczmarczyk@agh.edu.pl"}
 {name = "Kasper Sapała", email = "kasper.sapala@gmail.com"}
 {name = "Tomasz Wąs", email = "was@agh.edu.pl"}
]
description = "Map of Elections"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
readme = "README.md"
dynamic = ["dependencies", "optional-dependencies"]


[project.urls]
Homepage = "https://github.com/szufix/mapel"


# setuptools specific options
[tool.setuptools.packages.find]
where = [".", "mapel"] 

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
extras = {file = ["optional_requirements.txt"]}

