[build-system]
requires = ["setuptools>=65", "wheel", "pybind11>=2.6.1"]
build-backend = "setuptools.build_meta"

[project]
name = "mapel-marriages"
version = "2.0.6"
authors = [
 {name = "Stanislaw Szufa", email = "s.szufa@gmail.com"},
 {name = "Niclas Boehmer", email = "niclas.boehmer@tu-berlin.de"},
]
description = "Map of Marriages"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
readme = "README.md"
dynamic = ["dependencies"]


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
